--- a/resources/ts/plugins/i18n/locales/ko.json
+++ b/resources/ts/plugins/i18n/locales/ko.json
@@ -137,13 +137,13 @@
     "User information": "회원 정보",
     "merchandises-management": "가맹점 관리",
     "merchandises": "가맹점 목록",
-    "merchandise-settlements": "가맹점 정산 관리",
-    "salesforce-settlements": "영업점 정산 관리",
-    "merchandise-settlements-histories": "가맹점 정산 이력",
-    "salesforce-settlements-histories": "영업점 정산 이력",
+    "merchandise-settle": "가맹점 정산 관리",
+    "salesforce-settle": "영업점 정산 관리",
+    "merchandise-settle-history": "가맹점 정산 이력",
+    "salesforce-settle-history": "영업점 정산 이력",
     "paymodule-management": "결제모듈 관리",
-    "settlements": "정산 관리",
-    "settlements-histories": "정산 이력",
+    "settle": "정산 관리",
+    "settle-history": "정산 이력",
 
     "Transaction": "거래",
     "salesforce-management": "영업점 관리",
@@ -158,6 +158,7 @@
     "Abnormal transaction": "이상거래 관리",
     "Service": "서비스",
     "Notice": "공지사항",
+    "Complaint": "민원 관리",
     "Log management": "로그 관리",
     "Service management": "서비스 관리",
     "PG management": "PG사 관리",
