--- a/resources/ts/plugins/i18n/locales/ko.json
+++ b/resources/ts/plugins/i18n/locales/ko.json
@@ -159,9 +159,14 @@
     "Service": "서비스",
     "Notice": "공지사항",
     "Complaint": "민원 관리",
-    "Log management": "로그 관리",
     "Service management": "서비스 관리",
     "PG management": "PG사 관리",
     "Operation management": "운영 관리",
-    "Operator management": "직원 및 본사 관리"
+    "Operator management": "직원 및 본사 관리",
+    "History management": "이력 관리",
+    "Fee change history management": "수수료율 변경이력",
+    "Notification sending history": "노티 발송이력",
+    "Log management": "로그 관리",
+    "Noti send history": "노티 발송 이력",
+    "Bulk registration": "대량 등록"
 }
