--- a/resources/ts/plugins/i18n/locales/ko.json
+++ b/resources/ts/plugins/i18n/locales/ko.json
@@ -162,7 +162,7 @@
     "Service management": "서비스 관리",
     "PG management": "PG사 관리",
     "Operation management": "운영 관리",
-    "Operator management": "직원 및 본사 관리",
+    "Operator management": "운영자 관리",
     "History management": "이력 관리",
     "Fee change history management": "수수료율 변경이력",
     "Notification sending history": "노티 발송이력",
