--- a/resources/ts/plugins/i18n/locales/ko.json
+++ b/resources/ts/plugins/i18n/locales/ko.json
@@ -141,6 +141,7 @@
     "salesforce-settle": "영업점 정산 관리",
     "merchandise-settle-history": "가맹점 정산 이력",
     "salesforce-settle-history": "영업점 정산 이력",
+    "terminal-management": "단말기 관리",
     "paymodule-management": "결제모듈 관리",
     "settle": "정산 관리",
     "settle-history": "정산 이력",
@@ -156,6 +157,7 @@
     "Simple payment": "간편 결제",
     "Cancel payment": "결제 취소",
     "Abnormal transaction": "이상거래 관리",
+    "Fail transaction": "결제실패 관리",
     "Service": "서비스",
     "Notice": "공지사항",
     "Complaint": "민원 관리",
