--- a/resources/ts/plugins/i18n/locales/ko.json
+++ b/resources/ts/plugins/i18n/locales/ko.json
@@ -169,5 +169,6 @@
     "Notification sending history": "노티 발송이력",
     "Log management": "로그 관리",
     "Noti send history": "노티 발송 이력",
-    "Bulk registration": "대량 등록"
+    "Bulk registration": "대량 등록",
+    "computational transfer": "이전 전산 이동"
 }
