--- a/resources/ts/plugins/i18n/locales/ko.json
+++ b/resources/ts/plugins/i18n/locales/ko.json
@@ -15,7 +15,6 @@
     "Avatar": "화신",
     "Badge": "배지",
     "Button": "단추",
-    "Calendar": "캘린더",
     "Image": "영상",
     "Pagination": "쪽수 매기기",
     "Progress": "진전",
@@ -141,7 +140,7 @@
     "salesforce-settle": "영업점 정산 관리",
     "merchandise-settle-histories": "가맹점 정산 이력",
     "salesforce-settle-histories": "영업점 정산 이력",
-    "terminal-management": "단말기 관리",
+    "terminal-management": "장비 관리",
     "paymodule-management": "결제모듈 관리",
     "settle": "정산 관리",
     "settle-histories": "정산 이력",
